<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f2f2f2"
    android:padding="10dp">

    <ImageView
        android:id="@+id/taxiPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/yellow_taxi"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/baloo"
        android:text="@string/_12_haziran_2020_15_55"
        app:layout_constraintStart_toEndOf="@+id/taxiPhoto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/_55_km"
        android:fontFamily="@font/baloo"
        app:layout_constraintStart_toEndOf="@+id/taxiPhoto"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/tripTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/_35_dk"
        android:fontFamily="@font/baloo"
        app:layout_constraintStart_toEndOf="@+id/itemDistance"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/itemBillPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/_550"
        android:textSize="8pt"
        android:fontFamily="@font/baloo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/statusItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/statusItem"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:src="@drawable/ic_not_approved"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemBillPrice"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/app_text" />
</androidx.constraintlayout.widget.ConstraintLayout>