<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00ffffff"
    android:padding="30dp"
    app:cardBackgroundColor="#00ffffff"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="12dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="#f2f2f2"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nameSurnameDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/taxiPhotoDialog"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/muli_black"
                android:gravity="start"
                android:text="@string/ahmet_yaman"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameSurnameDialog"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/muli"
                android:gravity="center"
                android:text="@string/_12_haziran_2020_15_55"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/taxiPhotoDialog"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/yellow_taxi" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/muli"
            android:text="@string/gidilen_mesafe"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <TextView
            android:id="@+id/distanceDialog"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:gravity="start"
            android:text="@string/_55_km"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/muli"
            android:gravity="start"
            android:text="@string/seyahat_suresi"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/distanceDialog" />

        <TextView
            android:id="@+id/tripTimeDialog"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/muli"
            android:gravity="start"
            android:text="@string/_30_dk"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/distanceDialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/muli"
            android:gravity="start"
            android:text="@string/fis_tutari"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tripTimeDialog" />

        <TextView
            android:id="@+id/billPriceDialog"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/muli"
            android:gravity="start"
            android:text="@string/_134"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tripTimeDialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/muli"
            android:gravity="start"
            android:text="@string/hesaplanan_tutar"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/billPriceDialog" />

        <TextView
            android:id="@+id/calculatedPriceDialog"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/muli"
            android:gravity="start"
            android:text="@string/_33_02"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/billPriceDialog" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/approve"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:background="@drawable/start_button_bg"
            android:backgroundTint="#11b030"
            android:fontFamily="@font/muli_black"
            android:text="@string/onayla"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/refuse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculatedPriceDialog" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/refuse"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:background="@drawable/start_button_bg"
            android:backgroundTint="#c60f0f"
            android:fontFamily="@font/muli_black"
            android:text="@string/reddet"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/approve"
            app:layout_constraintTop_toBottomOf="@+id/calculatedPriceDialog" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>